# Novel-Engine

./: NOTICE  THIRD_PARTY.md  provenance.yaml  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
alembic/versions/: 0004_creative_bundle_persistence.py
docs/api/: openapi.current.json
frontend/src/: index.css
frontend/src/app/: api.test.ts  api.ts  apiCreativeContract.ts
frontend/src/features/studio/: CreativeWorkshop.test.tsx  CreativeWorkshop.tsx  CreativeWorkshopPanels.tsx  EntryPage.tsx  ProjectLibraryPage.tsx  StudioNavigator.tsx  creativeWorkshopModel.ts
frontend/tests/e2e/: studio.spec.ts
scripts/ai/: approved_migrations.txt  regression_check.py
src/contexts/studio/application/ports/: creative_repository.py
src/contexts/studio/application/services/: creative_service.py  facade_auth_project.py  facade_base.py
src/contexts/studio/domain/: creative.py  exceptions.py
src/contexts/studio/infrastructure/: creative_models.py  models.py
src/contexts/studio/infrastructure/repository/: __init__.py  creative.py  creative_confirmation.py  creative_mapping.py
src/contexts/studio/interface/http/: creative_router.py  errors.py  router.py  schemas.py
src/shared/infrastructure/config/: settings_sections.py
tests/apps/api/: test_creative_persistence.py
tests/apps/api/middleware/: test_cors.py
tests/apps/cli/: test_creative_bundle_migration.py
tests/contexts/studio/: test_creative_contracts.py
tests/unit/scripts/ai/: test_regression_check.py
