[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "novel-engine"
version = "0.3.1"
description = "Self-hosted single-author novel writing studio"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "Jackela"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # Core framework
    "fastapi>=0.116.1,<0.139.0",
    "pydantic>=2.11.7,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "uvicorn>=0.35.0,<1.0.0",
    "httpx>=0.28.1,<1.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    # Template and configuration
    "jinja2>=3.0.0,<4.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    # Monitoring and telemetry
    "prometheus-client>=0.19.0,<1.0.0",
    # Structured Logging (ARCH-003)
    "structlog>=24.0.0,<27.0.0",
    # Local Owner password hashing
    "bcrypt>=5.0.0,<6.0.0",
    # Authoritative local persistence and deterministic exports
    "SQLAlchemy>=2.0.0,<3.0.0",
    "alembic>=1.12.0,<2.0.0",
    "aiosqlite>=0.20.0,<1.0.0",
    "python-docx>=1.1.0,<2.0.0",
    "EbookLib>=0.18,<1.0",
]

[project.scripts]
novel-engine = "src.apps.cli.novel_engine:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff==0.15.21",
    "mypy>=1.0",
    "bandit[toml]>=1.7",
    "import-linter>=2.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0", 
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.2.0",
    "coverage[toml]>=7.0.0",
    "httpx>=0.28.1",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=8.0.0",
    "mkdocstrings[python]>=0.19.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]
exclude = ["tests*", "ai_testing*", "frontend*", "docs*", "logs*", "build*", "dist*"]

# Black code formatting
[tool.black]
line-length = 88
target-version = ['py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort import sorting
[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
src_paths = ["src", "tests"]

# Ruff linter configuration
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# Expanded ruleset to catch real issues (was E4/E7/E9/F/I only).
# See AUDIT_REPORT_Linus.md finding Q6.
select = [
    "E4", "E7", "E9", "F", "I",    # original
    "C90",                           # mccabe complexity
    "BLE",                           # blind except
    "S",                             # flake8-bandit security
    "T20",                           # print statements
    "ARG",                           # unused arguments
    "PLR",                           # pylint refactor checks
    "UP",                            # pyupgrade
    "B",                             # flake8-bugbear
    "SIM",                           # simplifications
]
ignore = [
    "E402",   # Module level import not at top of file (needed for scripts)
    "S101",   # assert used (common in tests and pydantic validators)
    "S603",   # subprocess without shell (uvx calls in pre-commit are fine)
    "S607",   # start process with partial path
    "PLR0913", # Repository ports and command handlers favor explicit parameters
    "PLR2004", # Domain/test constants are clearer inline than indirect aliases
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E402"]  # Scripts need sys.path modification before imports

[tool.ruff.format]
line-ending = "lf"

# MyPy type checking
[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
follow_imports = "normal"

# files = [...]  # Removed to enable global type checking


[[tool.mypy.overrides]]
module = [
    "yaml.*",
    "ebooklib.*",
]
ignore_missing_imports = true

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
title = "Novel Engine Test Coverage"

[tool.coverage.xml]
output = "coverage.xml"

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
timeout = 300  # Global timeout to prevent external process termination
addopts = [
    "-v",
    "--tb=short",
    "-p", "asyncio",
    "--asyncio-mode=auto"
]

filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning:pydantic.*",
    "ignore::pytest.PytestReturnNotNoneWarning",
]
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests between components",
    "system: Full system end-to-end tests",
    "e2e: End-to-end workflow tests",
    "api: API endpoint tests",
    "performance: Performance and load tests",
    "security: Security and validation tests",
    "slow: Tests that take significant time to run (> 1000ms / 1s)",
    "medium: Medium speed tests (100ms - 1000ms)",
    "fast: Fast tests that complete in <100ms",
    "requires_services: Tests requiring external services to be running",
    "smoke: Lightweight smoke tests",
    "asyncio: Async tests",
    "requires_dashscope: Tests requiring DashScope API access and an API key",
]

# Bandit security linting
[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = ["B101", "B601"]
